add_executable(pwm_test pwm_test.cpp)
add_executable(gpio_test gpio_test.cpp)
add_executable(motor_test motor_test.cpp)
add_executable(encoder_test encoder_test.cpp)
add_executable(wheel_test wheel_test.cpp)
add_executable(single_wheel_test single_wheel_test.cpp)
add_executable(robot_test robot_test.cpp)
add_executable(serial_test serial_test.cpp)
add_executable(serial_robot_test serial_robot_test.cpp)
add_executable(calibration_straight calibration_straight.cpp)
add_executable(calibration_rotation calibration_rotation.cpp)

target_link_libraries(pwm_test PRIVATE motor_control)
target_link_libraries(gpio_test PRIVATE motor_control)
target_link_libraries(motor_test PRIVATE motor_control)
target_link_libraries(encoder_test PRIVATE motor_control pthread)
target_link_libraries(wheel_test PRIVATE motor_control pthread)
target_link_libraries(single_wheel_test PRIVATE motor_control pthread)
target_link_libraries(robot_test PRIVATE motor_control pthread)
target_link_libraries(serial_test PRIVATE motor_control pthread)
target_link_libraries(serial_robot_test PRIVATE motor_control pthread)
target_link_libraries(calibration_straight PRIVATE motor_control pthread)
target_link_libraries(calibration_rotation PRIVATE motor_control pthread)
